--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ p{
 .section-m1{
     margin: 40px 0;
 }
+button.normal{
+    font-size:14px ;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: black;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
 body{
     width: 100%;
 }
@@ -171,7 +183,12 @@ margin: 15px 0;
 
 }
 
-
+#product1 .pro-container{
+     display: flex;
+     justify-content: space-between;
+     padding-top: 20px;
+     flex-wrap: wrap;
+}
 
 #product1 .pro{
     width: 23%;
@@ -218,7 +235,7 @@ box-shadow: 20px 20px 30px rgba( 0, 0, 0, 0.06);
     font-weight: 700;
     color: #088178;
 }
-#product1 .pro .cart{
+/* #product1 .pro .cart{
     width: 40px;
     height: 40px;
     line-height: 40px;
@@ -227,10 +244,54 @@ box-shadow: 20px 20px 30px rgba( 0, 0, 0, 0.06);
     font-weight: 500;
     color: #088178;
     border: 1px solid #cce7d0;
-    /* position: absolute; */
+    position: absolute; 
     bottom: 20px ;
     right: 10px;
+    text-align: center;
+     */
+/* } */
+
+#product1 .pro .cart {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 50%;
+    background-color: #e8f6ea;
+    color: #088178;
+    border: 1px solid #cce7d0;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    text-align: center;
+    font-size: 20px;
 }
+
+#banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+background-image: url("img/banner/b2.jpg");
+width: 100%;
+height: 40vh;
+background-size: cover;
+}
+
+#banner h4{
+    color: white;
+    font-size: 16px;
+}
+#banner h2{
+    color: white;
+    font-size: 30px;
+    padding: 10px 0;
+}
+#banner h2 span{
+    color: #ef3636;
+   
+}
+
 
 
 
