--- a/style.css
+++ b/style.css
@@ -47,6 +47,19 @@ button.normal{
     outline: none;
     transition: 0.2s;
 }
+
+button.white{
+    font-size:13px ;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    border: 1px solid #fff;
+    outline: none;
+    transition: 0.2s;
+}
+
 body{
     width: 100%;
 }
@@ -291,6 +304,80 @@ background-size: cover;
     color: #ef3636;
    
 }
+#banner button:hover{
+    background: #088178;
+    columns: #fff;
+}
+
+
+/* #sm-banner{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  
+}
+
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("img/banner/b17.jpg");
+    min-width: 580px;
+   height: 50vh;
+   background-size: cover;
+   padding: 30px;
+} */
+
+
+#sm-banner {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;   /* remove extra left-right padding */
+    gap: 20px;
+}
+
+#sm-banner .banner-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("img/banner/b17.jpg");
+    width: calc(50% - 10px);  /* both sides equal */
+    height: 50vh;
+    background-size: cover;
+    padding: 30px;
+}
+
+#sm-banner .banner-box2 {
+   background-image: url("img/banner/b10.jpg");
+}
+#sm-banner h4{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+
+}
+
+#sm-banner h2{
+    color: #fff;
+    font-size: 28px;
+    font-weight: 800;
+}
+#sm-banner span{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+
+#sm-banner .banner-box:hover button{
+    background-color: #088178;
+    border: 1px solid #088178;
+
+}
+
 
 
 
