--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h4{
     color: #222;
 }
 h6{
-    font-weight: 700px;
+    font-weight: 700;
     font-size: 12px;
 }
 p{
@@ -306,7 +306,7 @@ background-size: cover;
 }
 #banner button:hover{
     background: #088178;
-    columns: #fff;
+    color: #fff;
 }
 
 
@@ -377,6 +377,93 @@ background-size: cover;
     border: 1px solid #088178;
 
 }
+ #banner3 {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 80px;
+    margin-top: 40px;
+ }
+  #banner3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: url("img/banner/b7.jpg");
+    /* width: calc(50% - 10px);  both sides equal */
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+ }
+  #banner3 .banner-box2{
+    background-image: url("img/banner/b4.jpg");
+  }
+   #banner3 .banner-box3{
+    background-image: url("img/banner/b18.jpg");
+  }
+ #banner3 h2{
+    color: #fff;
+    font-weight:900 ;
+    font-size: 22px;
+
+ }
+ #banner3 h3{
+    color: #ec544e;
+    font-weight:800 ;
+    font-size: 15px;
+
+ }
+ #newsletter{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url("img/banner/b14.png");
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
+    background-color: #041e42;
+ }
+ #newsletter h4{
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+ }
+ #newsletter p{
+   
+    color:#818ea0;
+ }
+#newsletter p span{
+   
+    color: #ffbd27;
+ }
+ #newsletter .form{
+ display: flex;
+ width: 40%;
+ }
+ #newsletter input{
+  height: 3.125rem;
+  padding: 0 1.25rem;
+  font-size:14px ;
+  width: 100%;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  outline: none;
+ border-top-left-radius: 0;
+ border-top-right-radius: 0;
+ }
+ #newsletter  button{
+    background-color: #088178;
+    color: #fff;
+    white-space: nowrap;
+    border-top-left-radius: 0;
+ border-top-left-radius: 0;
+
+ }
+
+
 
 
 
