--- a/style.css
+++ b/style.css
@@ -504,7 +504,18 @@ background-size: cover;
     cursor: pointer;
 
  }
-
+   footer .install .row img{
+    border: 1px solid #088178;
+    border-radius: 6px;
+   }
+   footer .intall img{
+    margin: 10px 0 15px 0;
+   }
+   footer .follow i:hover,
+   footer .follow a:hover{
+    color:#088178;
+   }
+   
 footer .copyright{
     width: 100%;
     text-align: center;
