--- a/style.css
+++ b/style.css
@@ -530,9 +530,41 @@ footer .copyright{
     border-top: 1px solid #e1e1e1;
     font-size: 13px;
 }
+/* sjop page */
+
+#page-header{
+    background-image: url(img/banner/b1.jpg);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+}
+#page-header h2,
+#page-header p{
+    color: #fff;
+}
+#pagination{
+    text-align: center;
+
+}
+#pagination a{
+    text-decoration: none;
+    background-color: #088178;
+    padding: 15px 20px;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
 
 /* Media Query */
 @media (max-width:799px) {
+    .section-p1{
+        padding: 40px 40px;
+    }
     #navbar{
         display: flex;
         flex-direction: column;
@@ -575,6 +607,96 @@ footer .copyright{
     #lg-bag{
         display: none;
     }
+    #hero {
+    height: 70vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+    }
+    #feature{
+        justify-content: center;
+    }
+    #feature .fe-box{
+        margin: 15px 15px;
+
+    }
+    #product1 .pro-container{
+        justify-content: center;
+    }
+    #product1 .pro{
+        margin: 15px;
+    }
+    #banner{
+        height: 20vh;
+    }
+    #sm-banner .banner-box{
+        min-width: 100%;
+        height: 30vh;
+    }
+    #banner3{
+        padding: 0 40px;
+    }
+    #banner3 .banner-box{
+        width: 28%;
+    }
+    #newsletter .form{
+        width: 70%;
+    }
+
+}
+@media (max-width:477px) {
+    .section-p1{
+        padding: 20px;
+    }
+    #header{
+        padding: 10px 30px;
+    }
+    h1{
+        font-size: 38px;
+    }
+    h2{
+        font-size: 32px;
+    }
+
+    #hero{
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    #feature{
+        justify-content: space-between;
+    }
+#feature .fe-box{
+    width: 155px;
+    margin: 0 0 15px 0;
+}
+#product .pro{
+    width: 100%;
+}
+#banner{
+    height: 40vh;
+}
+#sm-banner .banner-box{
+        
+        height: 40vh;
+    }
+
+#sm-banner .banner-box2{
+    margin-top: 20px;
+}
+#banner3{
+    padding: 0 20px;
+}
+#banner3 .banner-box{
+    width: 100%;
+}
+#newsletter{
+    padding: 40px 20px;
+}
+#newsletter .form{
+    width: 100%;
+}
+footer .copyright{
+    text-align: start;
+}
 }
 
 
