--- a/style.css
+++ b/style.css
@@ -671,6 +671,38 @@ footer .copyright{
     color: #c9cbce;
     z-index: -9;
 }
+/* about page */
+#page-header.about-header{
+    background-image:url("img/about/banner.png") ;
+
+}
+#about-header{
+    display: flex;
+    align-items: center;
+}
+#about-header img{
+    flex: 1;
+    width: 50%;
+    height:auto ;
+}
+#about-header div {
+    flex: 1;
+    padding-left: 40px;
+}
+#about-app{
+    text-align: center;
+}
+#about-app .video{
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+#about-app .video video{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
 /* Media Query */
 @media (max-width:799px) {
     .section-p1{
@@ -823,6 +855,23 @@ footer .copyright{
     
 }
 
+/* blog page */
+#blog{
+    padding: 100px 20px 0 20px;
+}
+#blog .blog-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+#blog .blog-img{
+     width: 100%;
+     margin-right: 0;
+     margin-bottom: 30px;
+}
+#blod .blog-details{
+    width: 100%;
+}
 }
 
 
