--- a/style.css
+++ b/style.css
@@ -703,6 +703,50 @@ footer .copyright{
     border-radius: 20px;
 }
 
+/* contact page */
+#contact-details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+#contact-details .details{
+    width: 40%;
+}
+#contact-details .details span{
+     font-size: 12px;
+}
+#contact-details .details h2{
+    font-size: 26px;
+    line-height: 35px;
+    padding: 20px 0;
+}
+#contact-details .details h3{
+    font-size: 16px;
+    padding-bottom: 15px;
+}
+#contact-details .details li {
+    list-style: none;
+    display: flex;
+    padding: 10px 0;
+}
+#contact-details .details li i{
+    font-size: 14px;
+    padding-right: 22px;
+}
+#contact-details .details li p{
+    margin: 0;
+    font-size: 14px;
+}
+
+#contact-details .map{
+    width: 55%;
+    height: 400px;
+}
+#contact-details .map iframe{
+    width: 100%;
+    height: 100%;
+}
 /* Media Query */
 @media (max-width:799px) {
     .section-p1{
@@ -870,6 +914,20 @@ footer .copyright{
      margin-bottom: 30px;
 }
 #blod .blog-details{
+    width: 100%;
+}
+/* about page */
+#about-header{
+    flex-direction: column;
+}
+#about-header img{
+    width: 100%;
+    margin-bottom: 20px;
+}
+#about-header img{
+    padding-left: 0px ;
+}
+#about-app .video{
     width: 100%;
 }
 }
